removed margin & padding in row to allow components to no longer contain white space between them

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,19 @@ code {
     monospace;
 } */
 
-p {
-  font-weight: bolder;
+/*  universal styling */
+.row{
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+/* about page  */
+.about{
+  background-image: url(./assets/images/waterfall.jpg);
+  justify-content: center;
+  display:grid;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
